# learning-service

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0b90d74ee0d8_first_init_models.py
app/application/dto/: card_dto.py
app/application/protocols/: card_protocol.py  jwt_verifier_protocol.py  uow.py
app/application/usecase/: add_card_usecase.py  delete_card.py  get_all_cards_usecase.py  get_card_by_id_usecase.py  get_due_usecase.py  update_card_usecase.py
app/domain/entity/: card.py
app/domain/exception/: card_exceptions.py
app/domain/value_object/: review_quality_vo.py  word_text_vo.py
app/infrastructure/: di.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: engine.py  session.py  uow.py
app/infrastructure/mapper/: card_mapper.py
app/infrastructure/models/: card_model.py
app/infrastructure/repositories/: card_repositories.py
app/infrastructure/security/: jwt_verifier.py
app/presentation/api/: depends.py
app/presentation/api/v1/: card_controller.py
app/presentation/mappers/: card_schema_mapper.py
app/presentation/schemas/: card_schema.py
